--- a/index.html
+++ b/index.html
@@ -1,232 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal de Notícias</title>
+    <title>One Piece</title>
+    <link rel="stylesheet" href="main.css">
 
-    <link rel="stylesheet" href="css.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Madimi+One&family=Nova+Cut&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header id="header">
-        <div class="container">
-            <h1>Meu Portal de Notícias</h1>
 
-            <ul>
-                <li><a href="#esportes">Esportes</a></li>
-                <li><a href="#economia">Economia</a></li>
-                <li><a href="#entretenimento">Entretenimento</a></li>
-                <li><a href="#tecnologia">Tecnologia</a></li>
-            </ul>
+    <header>
+        <div class="container">
+            <img src="images/logo_onepiece.png" id="logo_header" alt="logo_onepiece">
+
+            <nav>
+                <ul>
+                    <li><a href="#about">Sobre o Anime</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
 
-    <section id="esportes">
+    <section id="about">
         <div class="container">
-            <h2>Esportes</h2>
-            <div class="articles">
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/esportes_01.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/esportes_02.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/esportes_03.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/esportes_04.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
+            <h1>Sobre o Anime</h1>
+            <div id="image_and_text">
+                <img src="images/wallpaper.jpg" alt="tripulação dos chapéus de palha" id="img_wall">
+
+                <div>
+                    <h2>O Anime com mais de mil episódios</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae voluptates, magni ab
+                        blanditiis aut fugit incidunt unde temporibus quasi eos perspiciatis voluptate vero in similique
+                        error saepe? Commodi, deserunt vel.</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique amet labore omnis sit?
+                        Similique sequi quod voluptas maxime tenetur ullam, omnis iure modi, quia minima dolores debitis
+                        atque delectus molestiae?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente eum eos in, veniam quo, ducimus
+                        saepe corrupti consequatur omnis distinctio ab ullam, cumque accusamus iusto? Dolorem accusamus
+                        voluptatum assumenda sunt.</p>
+                    <ul class="logos">
+                        <li><img src="images/logo_crunchyroll.png" alt="" style="height: 16px;"></li>
+                        <li><img src="images/logo_toei.png" alt="" style="height: 48px;"></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
-    <section id="economia">
+
+    <section class="contact" id="contact">
         <div class="container">
-            <h2>Economia</h2>
-            <div class="articles">
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/economia_01.png" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/economia_02.png" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/economia_03.png" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/economia_04.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
+            <h1>Contato</h1>
+            <div class="contact-methods">
+                <div>
+                    <h2>Fale sobre One Piece</h2>
+                    <form action="">
+                        <input type="text" placeholder="Seu Nome" required>
+                        <input type="email" placeholder="Seu E-mail" required>
+                        <input type="tel" placeholder="Seu Telefone">
+                        <textarea placeholder="Sua Crítica"></textarea>
+                        <button type="submit">Enviar</button>
+                    </form>
+                </div>
+                <div>
+                    <h2>Onde assistir</h2>
+                    <ul class="logos">
+                        <li><img src="images/logo_crunchyroll.png" alt="" style="height: 16px;"></li>
+                        <li><img src="images/logo_toei.png" alt="" style="height: 48px;"></li>
+                    </ul>
+                </div>
+                <div class="creator">
+                    <h2>Criador</h2>
+                    <img src="images/oda.jpg" alt="Oda" height="180px" id="img_oda">
+                    <h3>Eiichiro Oda</h3>
+                </div>
             </div>
         </div>
     </section>
-    <section id="entretenimento">
+
+    <footer>
         <div class="container">
-            <h2>Entretenimento</h2>
-            <div class="articles">
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/entretenimento_01.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/entretenimento_02.png" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/entretenimento_03.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/entretenimento_04.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-            </div>
+            <p>
+                &copy; One Piece - Todos os direitos reservados.
+            </p>
         </div>
-    </section>
-    <section id="tecnologia">
-        <div class="container">
-            <h2>Tecnologia</h2>
-            <div class="articles">
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/tencologia_01.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/tencologia_02.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/tencologia_03.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-                <article>
-                    <h3>Título da Notícia</h3>
-                    <img src="imgs/tencologia_04.jpg" alt="" class="img_articles">
-                    <header>08/03/2024 às 07:53</header>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit eius incidunt accusamus
-                        doloribus
-                        quis, quidem quibusdam consequuntur assumenda doloremque magni at velit voluptates accusantium
-                        culpa
-                        sapiente natus. Nostrum, totam expedita.</p>
-                    <a href="">Ler Mais</a>
-                </article>
-            </div>
-        </div>
-    </section>
+    </footer>
+
 </body>
 
 </html>
